--- a/styles.css
+++ b/styles.css
@@ -86,7 +86,6 @@ header {
 
 .lineInputs {
 	display: flex;
-	/* display: none; */
 	flex-direction: column;
 }
 
@@ -214,9 +213,9 @@ header {
 
 .errorEffects {
 	animation: shake 0.65s ease;
-	border: 2px solid tomato;
-	text-shadow: rgb(209, 54, 22);
-	box-shadow: 0px 0px 5px 1px tomato;
+	border: 2px solid rgb(200, 30, 0);
+	text-shadow: rgb(200, 30, 0);
+	box-shadow: 0px 0px 3px 1px rgb(200, 30, 0);
 	transition: box-shadow ease-in-out 0.125s;
 }
 
